Fix overflowing margins on the menu

--- a/app/assets/stylesheets/menu.sass
+++ b/app/assets/stylesheets/menu.sass
@@ -1,14 +1,12 @@
 .menu
 
   .menu-content
-    width: 320px
+    max-width: 320px
     margin: 0 auto
     padding: 0 1em
 
 .action-bar-owner
   position: relative
-  margin: -0em -0.5em
-  padding: 0em 0.5em
 
   &:focus-within
     .action-bar
